--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -597,81 +597,69 @@ body>.navbar-collapse .nav li .nav-link1:hover {
 }
 
 .post-wrap {
-  max-width: 1120px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+    max-width: 1120px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-
 .post-item {
-  padding: 30px;
+    padding: 30px;
 }
-
 .post-item-wrap {
-  position: relative;
+    position: relative;
 }
-
 .post-item img {
-  display: block;
-  width: 100%;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22) !important;
+    display: block;
+    width: 100%;
 }
-
 .post-item:hover .post-info {
-  opacity: 1;
+    opacity: 1;
 }
-
 .post-link {
-  text-decoration: none;
+    text-decoration: none;
 }
-
 .post-info {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .5) 100%);
-  color: linear-gradient(to bottom, #FFA534 0%, #ff5221 100%);
-  opacity: 0;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  transition: .5s linear;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .5) 100%);
+    color: white;
+    opacity: 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    transition: .5s linear;
 }
-
 .post-meta {
-  text-transform: uppercase;
-  line-height: 18px;
-  font-weight: 500;
-  font-size: 11px;
-  padding: 0 0 10px 15px;
-  margin-bottom: 15px;
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-  border-bottom: 1px solid #ff7760;
+    text-transform: uppercase;
+    line-height: 18px;
+    font-weight: 500;
+    font-size: 11px;
+    padding: 0 0 10px 15px;
+    margin-bottom: 15px;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    border-bottom: 1px solid #ff7760;
 }
-
 .post-date:after {
-  content: "\2022";
-  margin: 0 6px;
-  font-size: 14px;
+    content: "\2022";
+    margin: 0 6px;
+    font-size: 14px;
 }
-
 .post-title {
-  padding: 0 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
+    padding: 0 15px;
+    font-weight: 600;
+    margin-bottom: 15px;
 }
-
 @media (min-width: 768px) {
-  .post-item {
-    flex-basis: 50%;
-    flex-shrink: 0;
-  }
+    .post-item {
+        flex-basis: 50%;
+        flex-shrink: 0;
+    }
 }
-
 @media (min-width: 960px) {
-  .post-item {
-    flex-basis: 33.333333333%;
-  }
+    .post-item {
+        flex-basis: 33.333333333%;
+    }
 }
 
 .upload {
