--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -404,7 +404,6 @@ a{
   position: relative;
   max-width: 800px;
   margin: 50px auto 0;
-  background: white;
   border-radius: 30px;
 }
 
@@ -413,7 +412,7 @@ a{
   position: absolute;
   width: 50px;
   height: 20px;
-  background: #f69a73;
+  background: #100804;
   border-radius: 20px;
 }
 
@@ -462,7 +461,7 @@ a{
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background: white;
+  background: #ffffff;
 }
 
 .form-inner {
@@ -474,20 +473,13 @@ a{
   width: 100%;
   padding: 0 20px;
   margin-bottom: 10px;
-  background: #E9EFF6;
+  background: #e9eff6;
   line-height: 40px;
   border-width: 0;
   border-radius: 20px;
   font-family: 'Roboto', sans-serif;
 }
 
-.form-inner input[type="submit"] {
-  margin-top: 30px;
-  background: #f69a73;
-  border-bottom: 4px solid #d87d56;
-  color: white;
-  font-size: 14px;
-}
 
 .form-inner textarea {
   resize: none;
@@ -621,7 +613,7 @@ body>.navbar-collapse .nav li .nav-link1:hover {
 }
 .post-info {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .5) 100%);
-    color: white;
+    color: #dd0707;
     opacity: 0;
     position: absolute;
     bottom: 0;
@@ -694,7 +686,7 @@ body>.navbar-collapse .nav li .nav-link1:hover {
   max-width: 350px;
   padding: 80px 30px 30px;
   margin: 50px auto 30px;
-  background: white;
+  background: #2EE59D;
 }
 
 .ui-form h3 {
@@ -705,31 +697,7 @@ body>.navbar-collapse .nav li .nav-link1:hover {
   color: #4a90e2;
   font-size: 30px;
   font-weight: normal;
-}
-
-.ui-form h3:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  left: 60px;
-  top: -30px;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background: #fee8e4;
-}
-
-.ui-form h3:after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  right: 50px;
-  top: -40px;
-  width: 0;
-  height: 0;
-  border-left: 55px solid transparent;
-  border-right: 55px solid transparent;
-  border-bottom: 90px solid #ffe3b5;
+    margin-top: 15px;
 }
 
 .form-row {
@@ -788,4 +756,3 @@ body>.navbar-collapse .nav li .nav-link1:hover {
   margin: 0;
   padding-top: 10px;
 }
-
