--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Rubik+One&subset=latin,cyrillic);
+
 *{
     margin: 0;
     padding: 0;
@@ -74,12 +76,13 @@ html{
 
 .navbar-menu a{
     margin-left: 10px;
-    color: black;
+    color: #000000;
     text-transform: uppercase;
-    font-size: 14px;
-    padding: 12px 20px;
+    font-size: 15px;
+    padding: 15px 15px;
     border-radius: 4px;
     transition: .3s linear;
+    font-family: 'Rubik One', sans-serif;
 }
 
 .sign{
