--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -838,40 +838,107 @@ footer{
 }
 
 
-.slider{
-    width: 200px;
-    height: 100vh;
-    display: flex;
-    background: url(../img/2.jpg) no-repeat;
-    background-position: 0 center;
-    background-size: 200px;
-    position: relative;
-}
-
-.slider input{
-    -webkit-appearance: none;
+.gallery-section{
     width: 100%;
-    background: none;
-    z-index: 10;
+    padding: 60px 0;
+    background: #f1f1f1;
 }
 
-.slider input::-webkit-slider-thumb{
-    -webkit-appearance: none;
-    width: 10px;
-    height: 100vh;
-    background-color: #d71010;
+.inner-width{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    padding: 0 20px;
+}
+
+.gallery-section h1{
+    text-align: center;
+    text-transform: uppercase;
+    color: #333;
+}
+
+.border{
+    width: 180px;
+    height: 4px;
+    background: #333;
+    margin: 60px auto;
+}
+
+.gallery-section .gallery{
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+}
+
+.gallery-section .image{
+    flex: 25%;
+    overflow: hidden;
     cursor: pointer;
 }
 
-.original-image{
-    position: absolute;
-    left: 0;
-    width: 5%;
-    height: 100vh;
-    background: url(../img/1.jpg) no-repeat;
-    background-position: 0 center;
-    background-size: 200px;
+.gallery-section .image img{
+    width: 100%;
+    height: 100%;
+    transition: 0.4s;
+}
+
+.gallery-section .image:hover img{
+    transform: scale(1.4) rotate(15deg);
+}
+
+@media screen and (max-width:960px) {
+    .gallery-section .image{
+        flex: 33.33%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .gallery-section .image{
+        flex: 50%;
+    }
+}
+
+@media screen and (max-width:480px) {
+    .gallery-section .image{
+        flex: 100%;
+    }
 }
 
 
+.col{
+    flex: 1;
+    height: 300px;
+    position: relative;
+}
+.countdown-col{
+    background: url(bg.png) no-repeat center;
+    background-size: cover;
+}
+.time{
+    color: #fff;
+    text-transform: uppercase;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+}
+.middle{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+}
+.time span{
+    padding: 0 14px;
+    font-size: 10px;
+}
+.time span div{
+    font-size: 40px;
+}
 
+@media screen and (max-width :900px){
+    .col{
+        flex: 100%;
+    }
+}
