--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -106,11 +106,11 @@ html{
 }
 
 .sticky .navbar-menu a{
-    color: #111;
+    color: #090808;
 }
 
 .sticky .menu-toggler span{
-    background-color: #111;
+    background-color: #000000;
 }
 
 #home{
@@ -292,8 +292,28 @@ section{
     font-size: 16px;
 }
 
+.textr{
+    margin: 10px 0;
+    color: #444;
+    font-size: 25px;
+}
+
 .about-text h3 span:nth-child(1):after,
-.about-text h3 span:nth-child(2):after{
+.about-text h3 span:nth-child(2):after,
+.about-text h3 span:nth-child(3):after,
+.about-text h3 span:nth-child(4):after,
+.about-text h3 span:nth-child(5):after,
+.about-text h3 span:nth-child(6):after{
+    content: "";
+    width: 6px;
+    height: 6px;
+    background-color: #444;
+    display: inline-block;
+    border-radius: 50%;
+    margin: 0 14px;
+}
+
+.about-text h3 span:nth-child(1):before{
     content: "";
     width: 6px;
     height: 6px;
@@ -317,6 +337,12 @@ section{
     flex-wrap: wrap;
 }
 
+.skillsh1{
+    text-align: center;
+    text-transform: uppercase;
+    color: #fdfcfc;
+}
+
 .skill{
     width: calc(50% - 20px);
     margin: 15px 0;
@@ -338,12 +364,12 @@ section{
     content: "";
     position: absolute;
     height: 6px;
-    background-color: #48dbfb;
+    background-color: #1bef03;
     bottom: 0;
 }
 
 .html:after{
-    width: 90%;
+    width: 50%;
 }
 
 .css:after{
@@ -375,6 +401,14 @@ section.dark1{
     background-attachment: fixed;
 }
 
+.dark2{
+    height: 100%;
+    min-height: 500px;
+    background-image: url(../img/collaj3.jpg);
+    background-blend-mode: darken;
+    background-size: cover;
+}
+
 section.dark{
     height: 100vh;
     min-height: 500px;
@@ -393,6 +427,22 @@ section.dark .section-title::before{
 }
 
 section.dark .section-title::after{
+    border: 4px solid #353b48;
+}
+
+section.dark3{
+    background-color: #353b48;
+}
+
+section.dark3 .section-title{
+    color: #f1f1f1;
+}
+
+section.dark3 .section-title::before{
+    background-color: #f1f1f1;
+}
+
+section.dark3 .section-title::after{
     border: 4px solid #353b48;
 }
 
@@ -664,7 +714,7 @@ footer{
         position: fixed;
         height: 100vh;
         width: 100%;
-        background-color: #353b48;
+        background-color: #0f6e66;
         top: 0;
         right: -100%;
         max-width: 400px;
@@ -683,6 +733,7 @@ footer{
         display: block;
         font-size: 30px;
         margin: 30px 0;
+        text-align: center;
     }
 
     .sticky .navbar-menu{
@@ -941,4 +992,16 @@ footer{
     .col{
         flex: 100%;
     }
+}
+
+.striped-shadow {
+    font-family: 'Rubik One', sans-serif;
+    font-size: 50px;
+    text-transform: uppercase;
+    text-shadow: -4px -4px 0px #e79201;
+    background: repeating-linear-gradient(45deg, #6EB495, #6EB495 1px, white 2px, white 3px);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: table;
+    margin: 20px auto;
 }
