--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -116,7 +116,7 @@ html{
 #home{
     height: 100vh;
     min-height: 500px;
-    background-image: linear-gradient(45deg, #f8a261, #6e9fc9), url(../img/bg.jpg);
+    background-image: linear-gradient(45deg, #f8a261, #6e9fc9);
     background-blend-mode: darken;
     background-size: 100% 100%, 4px 4px, cover;
     background-attachment: fixed;
@@ -395,24 +395,16 @@ section{
 section.dark1{
     height: 100%;
     min-height: 500px;
-    background-image: linear-gradient(45deg, #f8a261, #6e9fc9), url(../images/bg.jpg);
+    background-image: linear-gradient(45deg, #f8a261, #6e9fc9);
     background-blend-mode: darken;
     background-size: 100% 100%, 4px 4px, cover;
     background-attachment: fixed;
 }
 
-.dark2{
-    height: 100%;
-    min-height: 500px;
-    background-image: url(../img/collaj3.jpg);
-    background-blend-mode: darken;
-    background-size: cover;
-}
-
 section.dark{
     height: 100vh;
     min-height: 500px;
-    background-image: linear-gradient(45deg, #f8a261, #6e9fc9), url(../images/bg.jpg);
+    background-image: linear-gradient(45deg, #f8a261, #6e9fc9);
     background-blend-mode: darken;
     background-size: 100% 100%, 4px 4px, cover;
     background-attachment: fixed;
@@ -951,45 +943,6 @@ footer{
 
 @media screen and (max-width:480px) {
     .gallery-section .image{
-        flex: 100%;
-    }
-}
-
-
-.col{
-    flex: 1;
-    height: 300px;
-    position: relative;
-}
-.countdown-col{
-    background: url(bg.png) no-repeat center;
-    background-size: cover;
-}
-.time{
-    color: #fff;
-    text-transform: uppercase;
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    font-weight: bold;
-}
-.middle{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-}
-.time span{
-    padding: 0 14px;
-    font-size: 10px;
-}
-.time span div{
-    font-size: 40px;
-}
-
-@media screen and (max-width :900px){
-    .col{
         flex: 100%;
     }
 }
