--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -113,10 +113,23 @@ html{
 #home{
   height: 100vh;
   min-height: 500px;
-  background-image: linear-gradient(45deg, #f8a261, #6e9fc9);
+    background-image: linear-gradient(125deg,#2c3e50,#27ae60,#2980b9,#e74c3c,#8e44ad);
   background-blend-mode: darken;
-  background-size: 100% 100%, 4px 4px, cover;
+    background-size: 400% 400%;
   background-attachment: fixed;
+    animation: bganimation 15s infinite;
+}
+
+@keyframes bganimation {
+    0%{
+        background-position: 0% 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0% 50%;
+    }
 }
 
 #home .inner-width{
@@ -442,6 +455,7 @@ section{
 }
 
 section.dark1{
+    padding: 200px 0;
   height: 100%;
   min-height: 500px;
   background-image: linear-gradient(45deg, #f8a261, #6e9fc9);
@@ -485,6 +499,25 @@ section.dark3 .section-title::before{
 
 section.dark3 .section-title::after{
   border: 4px solid #353b48;
+}
+
+section.dark5{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section.dark5 video{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 .services{
@@ -545,6 +578,16 @@ section.dark3 .section-title::after{
   margin: 10px 0;
   padding: 30px;
   position: relative;
+}
+
+#holst video{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 .block::before{
