--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -149,7 +149,7 @@ html{
   font-family: 'Rubik One', sans-serif;
   font-size: 50px;
   text-transform: uppercase;
-  background: linear-gradient(180deg, rgb(225, 131, 25), rgb(238, 207, 89));
+  background: linear-gradient(180deg, rgb(22, 19, 15), rgb(50, 45, 28));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   color: #0B2349;
@@ -489,6 +489,18 @@ section.dark3{
   background-color: #353b48;
 }
 
+section.dark3 p{
+    color: #fdfdfd;
+}
+
+section.dark3 .skills{
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    color: #ffffff;
+}
+
 section.dark3 .section-title{
   color: #f1f1f1;
 }
@@ -606,7 +618,7 @@ section.dark5 video{
   position: absolute;
   width: 16px;
   height: 16px;
-  background-color: #48dbfb;
+  background-color: #e9ce1a;
   left: -28px;
   top: 30px;
   border-radius: 50%;
@@ -643,7 +655,7 @@ section.dark5 video{
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: #48dbfbcc;
+  background-color: rgba(217, 100, 20, 0.8);
   transition: .2s linear;
   opacity: 0;
   transform: scale(0);
@@ -660,7 +672,7 @@ section.dark5 video{
 }
 
 .work:hover img{
-  transform: scale(1.6) rotate(25deg);
+  transform: scale(1.6);
 }
 
 .work:hover::before,
@@ -1019,7 +1031,7 @@ footer{
 }
 
 .gallery-section .image:hover img{
-  transform: scale(1.4) rotate(15deg);
+  transform: scale(1.2);
 }
 
 @media screen and (max-width:960px) {
