--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -113,23 +113,40 @@ html{
 #home{
   height: 100vh;
   min-height: 500px;
-    background-image: linear-gradient(125deg,#2c3e50,#27ae60,#2980b9,#e74c3c,#8e44ad);
+  background-image: linear-gradient(125deg,#2c3e50,#27ae60,#2980b9,#e74c3c,#8e44ad);
   background-blend-mode: darken;
-    background-size: 400% 400%;
+  background-size: 400% 400%;
   background-attachment: fixed;
-    animation: bganimation 15s infinite;
+  -webkit-animation: bganimation 15s infinite;
+          animation: bganimation 15s infinite;
+}
+
+@-webkit-keyframes bganimation {
+  0%{
+    background-position: 0% 50%;
+  }
+
+  50%{
+    background-position: 100% 50%;
+  }
+
+  100%{
+    background-position: 0% 50%;
+  }
 }
 
 @keyframes bganimation {
-    0%{
-        background-position: 0% 50%;
-    }
-    50%{
-        background-position: 100% 50%;
-    }
-    100%{
-        background-position: 0% 50%;
-    }
+  0%{
+    background-position: 0% 50%;
+  }
+
+  50%{
+    background-position: 100% 50%;
+  }
+
+  100%{
+    background-position: 0% 50%;
+  }
 }
 
 #home .inner-width{
@@ -161,7 +178,7 @@ html{
 #home .content h1::after{
   content: "Реставрация фото";
   -webkit-animation: textanim 20s linear infinite;
-          animation: textanim 20s linear infinite;
+  animation: textanim 20s linear infinite;
 }
 
 @-webkit-keyframes textanim{
@@ -340,7 +357,8 @@ section{
 
 .about-pic{
   width: 200px;
-    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+  -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+          clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
   margin-right: 100px;
 }
 
@@ -390,7 +408,7 @@ section{
   text-align: justify;
   line-height: 26px;
   margin-top: 20px;
-    font-family: "montserrat", sans-serif;
+  font-family: "montserrat", sans-serif;
 }
 
 .skills{
@@ -456,7 +474,7 @@ section{
 }
 
 section.dark1{
-    padding: 200px 0;
+  padding: 200px 0;
   height: 100%;
   min-height: 500px;
   background-image: linear-gradient(45deg, #f8a261, #6e9fc9);
@@ -491,15 +509,15 @@ section.dark3{
 }
 
 section.dark3 p{
-    color: #fdfdfd;
+  color: #fdfdfd;
 }
 
 section.dark3 .skills{
-    margin-top: 40px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    color: #ffffff;
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  color: #ffffff;
 }
 
 section.dark3 .section-title{
@@ -515,14 +533,13 @@ section.dark3 .section-title::after{
 }
 
 section.dark5{
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
 
 .services{
   display: flex;
@@ -583,7 +600,6 @@ section.dark5{
   padding: 30px;
   position: relative;
 }
-
 
 .block::before{
   content: "";
@@ -989,7 +1005,8 @@ footer{
 }
 
 .alert{
-    color: #5cf306;
-    font-size: 25px;
-    text-align: center;
+  color: #5cf306;
+  font-size: 25px;
+  text-align: center;
 }
+
