--- a/Kodak/public/css/app.css
+++ b/Kodak/public/css/app.css
@@ -118,7 +118,7 @@ html{
   background-size: 400% 400%;
   background-attachment: fixed;
   -webkit-animation: bganimation 15s infinite;
-          animation: bganimation 15s infinite;
+  animation: bganimation 15s infinite;
 }
 
 @-webkit-keyframes bganimation {
@@ -358,7 +358,7 @@ section{
 .about-pic{
   width: 200px;
   -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
-          clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+  clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
   margin-right: 100px;
 }
 
@@ -800,9 +800,10 @@ footer{
   width: 40px;
   height: 40px;
   border: none;
-  border-radius: 6px;
+  background-color: #560c9b;
+  border-radius: 10px;
   cursor: pointer;
-  color: #9b0e99;
+  color: #ffffff;
   outline: none;
   display: none;
   font-size: 40px;
@@ -1029,4 +1030,5 @@ footer{
   font-size: 25px;
   text-align: center;
 }
+
 
