--- a/Kodak/resources/css/app.css
+++ b/Kodak/resources/css/app.css
@@ -480,10 +480,11 @@ section.dark1{
     padding: 200px 0;
     height: 100%;
     min-height: 500px;
-    background-image: linear-gradient(45deg, #f8a261, #6e9fc9);
+    background-image: linear-gradient(125deg,#2c3e50,#27ae60,#2980b9,#e74c3c,#8e44ad);
     background-blend-mode: darken;
-    background-size: 100% 100%, 4px 4px, cover;
+    background-size: 400% 400%;
     background-attachment: fixed;
+    animation: bganimation 15s infinite;
 }
 
 section.dark{
@@ -759,28 +760,136 @@ section.dark5{
 }
 
 footer{
-    box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6);
-    color: black;
-    padding: 80px 0;
-    text-align: left;
+    padding: 10px 0;
 }
 
-.copyright{
-    margin-bottom: 20px;
-    font-size: 25px;
+.footer-container{
+    max-width: 1300px;
+    margin: auto;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap-reverse;
 }
 
-.copyright a{
-    font-size: 30px;
-    color: red;
-    font-weight: 500;
+.logofooter{
+    width: 180px;
+}
+
+.social-media{
+    margin: 20px 0;
+}
+
+.social-media a{
+    color: #001a21;
+    margin-right: 25px;
+    font-size: 22px;
+    text-decoration: none;
+    transition: .3s linear;
+}
+
+.social-media a:hover{
+    color: #fc5c65;
+}
+
+.right-col h1{
+    font-family: 'Rubik One', sans-serif;
+    font-size: 40px;
+    text-transform: uppercase;
+    background: linear-gradient(180deg, rgb(22, 19, 15), rgb(50, 45, 28));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #0B2349;
+    display: table;
+    margin: 20px auto;
+    text-shadow: -4px -4px 0px yellow;
+
+}
+
+
+.border{
+    width: 100%;
+    height: 4px;
+    background: #fc5c65;
+    margin-bottom: 10px;
+}
+
+.newsletter-form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.txtb{
+    flex: 1;
+    padding: 18px 40px;
+    font-size: 16px;
+    color: #293043;
+    background: #ddd;
+    border: none;
+    font-weight: 700;
+    outline: none;
+    border-radius: 30px;
+    min-width: 260px;
+}
+
+.btn{
+    padding: 18px 40px;
+    font-size: 16px;
+    color: #f1f1f1;
+    background: #fc5c65;
+    border: none;
+    font-weight: 700;
+    outline: none;
+    border-radius: 30px;
+    margin-left: 20px;
+    cursor: pointer;
+    transition: opacity .3s linear;
+}
+
+.btn:hover{
+    opacity: .7;
+}
+
+.page-content{
+    min-height: 100vh;
+    font-size: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media screen and (max-width:960px) {
+    .footer-container{
+        max-width: 600px;
+    }
+    .right-col{
+        width: 100%;
+        margin-bottom: 60px;
+    }
+
+    .left-col{
+        width: 100%;
+        text-align: center;
+    }
+}
+
+
+@media screen and (max-width:700px){
+    .btn{
+        margin: 0;
+        width: 100%;
+        margin-top: 20px;
+    }
 }
 
 .goTop{
     position: fixed;
     z-index: 999;
     bottom: 40px;
-    right: 40px;
+    right: 20px;
     width: 40px;
     height: 40px;
     background-color: #48dbfb;
@@ -796,14 +905,12 @@ footer{
     position: fixed;
     z-index: 999;
     bottom: 40px;
-    left: 40px;
+    left: 20px;
     width: 40px;
     height: 40px;
     border: none;
-    background-color: #560c9b;
-    border-radius: 10px;
     cursor: pointer;
-    color: #ffffff;
+    color: #6814ab;
     outline: none;
     display: none;
     font-size: 40px;
