--- a/Kodak/resources/css/test.css
+++ b/Kodak/resources/css/test.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: #34495e;
+    background: #032e45;
 }
 
 .box{
@@ -12,8 +12,9 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background: #191919;
+    background-image: linear-gradient(125deg,#2c3e50, #1b5134, #0b151c, #0a2432,#8e44ad);
     text-align: center;
+    clip-path: circle(50% at 50% 50%);
 }
 .box h1{
     color: white;
